--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Orinoco - Site de vente en ligne à thème.Notre credo : nous démarquer en créant des applications thématiques.">
     <title>Accueil - Orinoco</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./frontend/css/style.css">
 </head>
 
 <body>
 
     <header>
-        <img src="./img/logo-orinoco.png" alt="logo orinoco"/>
+        <img src="./frontend/img/logo-orinoco.png" alt="logo orinoco"/>
         <nav>
             <a href=""></a>
             <a href=""></a>
