--- a/index.html
+++ b/index.html
@@ -8,25 +8,48 @@
     <meta name="description" content="Orinoco - Site de vente en ligne à thème.Notre credo : nous démarquer en créant des applications thématiques.">
     <title>Accueil - Orinoco</title>
     <link rel="stylesheet" href="./frontend/css/style.css">
+    <script src="https://kit.fontawesome.com/ac2f95dbfe.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
     <header>
         <img src="./frontend/img/logo-orinoco.png" alt="logo orinoco"/>
+        <form>
+            <label for=""> 
+                <div class="categories">catégories</div>
+            </label>
+            <label for="search">
+                <input type="search" name="search"/>
+            </label>
+            <label for="submit">
+                <div class="btn_search"><i class="fas fa-search"></i></div>
+            </label>
+        </form>
         <nav>
-            <a href=""></a>
-            <a href=""></a>
-            <a href="cart.html">Panier</a>
+            <a href="">Bonjour, identifiez-vous</a>
+            <a href="">Contact</a>
+            <a class="cart" href="cart.html"><i class="fas fa-shopping-cart"></i>Panier</a>
         </nav>
 
     </header>
-
-
-
-
+    <section class="contain">
+        <h1>Site de vente en ligne d'ours en peluche faits main</h1>
+        <div id="products">
+            <article></article>
+            <article></article>
+            <article></article>
+            <article></article>
+            <article></article>
+        </div>
+    </section>
 
     <footer>
+        <a href="">A propos</a>
+        <a href="">Moyens de paiement</a>
+        <i class="fab fa-facebook"></i>
+        <i class="fab fa-twitter"></i>
+    
 
     </footer>
 </body>
