html css static

--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -57,8 +57,8 @@
         </div>
     </div>
     <div class="nav-foot">
-        <a href="">Conditions générales</a>
-        <a href="">Copyright 2021, Orinoco</a>
+        <a href="">Conditions générales de vente</a>
+        <p>Copyright 2021, Orinoco</p>
     </div>
 </footer>
     
