--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
 </head>
 <body>
     <header> 
-        <nav>
-                <img src="./frontend/img/logo-orinoco.png" alt="logo orinoco"/>
-                <!-- <i class="fas fa-bars"></i> -->
+        
+        <nav> 
+            <img src="./frontend/img/logo-orinoco.png" alt="logo orinoco"/>
+            <div class="link">
                 <a href="#">Bonjour, Identifiez-vous</a>
                 <a href="#">Meilleures ventes</a>
                 <a href="#">Nouveautés</a>
                 <a href="mailto:Orinoco@contact.com">Contact</a>
                 <a class="cart" href="./frontend/cart.html"><i class="fas fa-shopping-cart"></i>Panier</a>
+            </div>
         </nav>
         <h1>Site de vente en ligne d'ours en peluche faits main</h1>
         <div class="search">
