--- a/frontend/product.html
+++ b/frontend/product.html
@@ -20,6 +20,38 @@
     </header>
 
 <div id="only"></div>
+<footer>
+    <div class="row-foot">
+        <div class="about">
+            <p >A propos</p>
+            <ul>
+                <li><a href="Orinoco.com">Oricono</a></li>
+                <li><a href="Oribook.com">Oribook</a></li>
+                <li><a href="Oritextil.com">Oritextil</a></li>
+            </ul>
+        </div>
+        <div class="pay">
+            <p>Moyens de paiement</p>
+            <ul>
+                <li><a href="#">Cartes de paiement</a></li>
+                <li><a href="#">Paiement en plusieurs fois</a></li>
+                <li><a href="#">Chèques-cadeaux</a></li>
+            </ul>
+
+
+        </div>
+        <div class="res-sociaux">
+            <a aria-label="facebook" href="facebook.com"><i class="fab fa-facebook"></i></a>
+            <a aria-label="twitter" href="twitter.com"><i class="fab fa-twitter"></i></a>
+            <a aria-label="instagram" href="instagram.com"><i class="fab fa-instagram-square"></i></a>
+        </div>
+    </div>
+    <div class="nav-foot">
+        <a href="">Conditions générales de vente</a>
+        <p>Copyright 2021, Orinoco</p>
+    </div>
+
+</footer>
     
 <script src="./js/product.js"></script>
 </body>
