--- a/frontend/product.html
+++ b/frontend/product.html
@@ -13,9 +13,13 @@
     <header>
         <nav>
             <img src="./img/logo-orinoco.png" alt="logo orinoco"/>
-            
+            <div class="link">
+            <a href="#">Meilleures ventes</a>
+            <a href="#">Nouveautés</a>
             <a href="mailto:Orinoco@contact.com">Contact</a>
+            <a class="cart" href="./frontend/cart.html"><i class="fas fa-shopping-cart"></i>Panier</a>
             <a class="cart" href="../index.html"><i class="fas fa-arrow-circle-left"></i>Accueil</a>
+        </div>
         </nav>
     </header>
 
