--- a/frontend/product.html
+++ b/frontend/product.html
@@ -17,7 +17,7 @@
             <a href="#">Meilleures ventes</a>
             <a href="#">Nouveautés</a>
             <a href="mailto:Orinoco@contact.com">Contact</a>
-            <a class="cart" href="./frontend/cart.html"><i class="fas fa-shopping-cart"></i>Panier</a>
+            <a class="cart" href="./cart.html"><i class="fas fa-shopping-cart"></i>Panier</a>
             <a class="cart" href="../index.html"><i class="fas fa-arrow-circle-left"></i>Accueil</a>
         </div>
         </nav>
