--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -19,7 +19,10 @@
 </header>
 
 <section id="cart">
-    
+    <div id="clear">
+        <p>Vider votre panier</p>
+    </div>
+
     <div id="commande">
         
     </div>
