--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
                 <div class="btn_search"><i class="fas fa-search"></i></div>      
             </form>
         </div>
-    </header>     
+    </header>   
+        <div id="contain">
         <div id="ours">
         </div>
+    </div>  
     <footer>
         <div class="row-foot">
             <div class="about">
