--- a/frontend/product.html
+++ b/frontend/product.html
@@ -29,7 +29,7 @@
         <div class="about">
             <p >A propos</p>
             <ul>
-                <li><a href="Orinoco.com">Oricono</a></li>
+                <li><a href="Orinoco.com">Orinoco</a></li>
                 <li><a href="Oribook.com">Oribook</a></li>
                 <li><a href="Oritextil.com">Oritextil</a></li>
             </ul>
