--- a/index.html
+++ b/index.html
@@ -27,16 +27,10 @@
             </div>
         </nav>
         <h1>Site de vente en ligne d'ours en peluche faits main</h1>
-        <div class="search">
-            <form method="post" action="#">         
-                <label for="search">Catégories</label>
-                <input type="search" id="search"/>
-                <div class="btn_search"><i class="fas fa-search"></i></div>      
-            </form>
-        </div>
+       
     </header>   
         <div id="contain">
-        <div id="ours">
+        <div id="teddies">
         </div>
     </div>  
     <footer>
@@ -44,7 +38,7 @@
             <div class="about">
                 <p >A propos</p>
                 <ul>
-                    <li><a href="Orinoco.com">Oricono</a></li>
+                    <li><a href="Orinoco.com">Orinoco</a></li>
                     <li><a href="Oribook.com">Oribook</a></li>
                     <li><a href="Oritextil.com">Oritextil</a></li>
                 </ul>
