--- a/frontend/product.html
+++ b/frontend/product.html
@@ -14,11 +14,9 @@
         <nav>
             <img src="./img/logo-orinoco.png" alt="logo orinoco"/>
             <div class="link">
-            <a href="#">Meilleures ventes</a>
-            <a href="#">Nouveautés</a>
             <a href="mailto:Orinoco@contact.com">Contact</a>
             <a class="cart" href="./cart.html"><i class="fas fa-shopping-cart"></i>Panier</a>
-            <a class="cart" href="../index.html"><i class="fas fa-arrow-circle-left"></i>Accueil</a>
+            <a class="cart" href="../index.html">Accueil</a>
         </div>
         </nav>
     </header>
@@ -41,8 +39,6 @@
                 <li><a href="#">Paiement en plusieurs fois</a></li>
                 <li><a href="#">Chèques-cadeaux</a></li>
             </ul>
-
-
         </div>
         <div class="res-sociaux">
             <a aria-label="facebook" href="facebook.com"><i class="fab fa-facebook"></i></a>
