frontend index.html

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
                 <a class="cart" href="./frontend/cart.html"><i class="fas fa-shopping-cart"></i>Panier</a>
             </div>
         </nav>
-              
+        <h1>Site de vente en ligne d'ours en peluche faits main</h1>    
+        <h2>Bienvenue chez Oriteddies</h2> 
     </header>  
-    <h1>Site de vente en ligne d'ours en peluche faits main</h1>   
+
         <div id="contain">
-        <div id="teddies">
-        </div>
-    </div>  
+            <div id="teddies"></div>
+        </div>  
     <footer>
         <div class="row-foot">
             <div class="about">
