--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -28,6 +28,7 @@
     </div>
     <div id="row">
         <p>Nom</p>
+        <p>Couleur</p>
         <p>Quantité</p>
         <p>Prix</p>
     </div>
