--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -35,6 +35,8 @@
     <div id="command"></div>
     <div id="total"></div>
 
+    <div id="erreurContact"></div>
+
     <div id="contact">
         <p>Vos coordonnées</p>
 
@@ -57,7 +59,7 @@
                 <label for="email"></label>
                 <input id="email" type="email" placeholder="e-mail" required>
             </div>
-            <div id="submit"><a href="#">Terminer et payer</a></div>
+            <div id="submit"><a id="essai" href="#">Terminer et payer</a></div>
 
         </form>
     </div>
