remise sur une ligne si doublon ourson

--- a/frontend/confirmation.html
+++ b/frontend/confirmation.html
@@ -22,8 +22,9 @@
 
 
     <div id="terminate">
-        <div id="thanks"></div>
+        <div id="confirm"></div>
         <div id="result"></div>
+        <div id="thanks"></div>
     </div>
 
     <footer>
