--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -67,29 +67,17 @@
             <div class="about">
                 <p>A propos</p>
                 <ul>
-                    <a href="">
-                        <li>Orinoco</li>
-                    </a>
-                    <a href="">
-                        <li>Oribook</li>
-                    </a>
-                    <a href="">
-                        <li>Oritextil</li>
-                    </a>
+                    <li><a href="Orinoco.com">Orinoco</a></li>
+                    <li><a href="Oribook.com">Oribook</a></li>
+                    <li><a href="Oritextil.com">Oritextil</a></li>
                 </ul>
             </div>
             <div class="pay">
                 <p>Moyens de paiement</p>
                 <ul>
-                    <a href="">
-                        <li>Cartes de paiement</li>
-                    </a>
-                    <a href="">
-                        <li>Paiement en plusieurs fois</li>
-                    </a>
-                    <a href="">
-                        <li>Chèques-cadeaux</li>
-                    </a>
+                    <li><a href="#">Cartes de paiement</a></li>
+                    <li><a href="#">Paiement en plusieurs fois</a></li>
+                    <li><a href="#">Chèques-cadeaux</a></li>
                 </ul>
             </div>
             <div class="res-sociaux">
@@ -99,7 +87,7 @@
             </div>
         </div>
         <div class="nav-foot">
-            <a href="">Conditions générales de vente</a>
+            <a href="#">Conditions générales de vente</a>
             <p>Copyright 2021, Orinoco</p>
         </div>
     </footer>
