--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <h1>Site de vente en ligne d'ours en peluche faits main</h1>
         <h2>Bienvenue chez Oriteddies</h2>
     </header>
-
+    <div id="errorIndex"></div>
     <div id="teddies"></div>
-    
+
     <footer>
         <div class="row-foot">
             <div class="about">
