--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <script src="https://kit.fontawesome.com/ac2f95dbfe.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div id="loader">
+        <div class="circle-loader"></div>
+    </div>
     <header>
         <nav>
             <img src="./frontend/img/logo-orinoco.png" alt="logo orinoco" />
