--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -13,6 +13,7 @@
         <nav>
             <img src="./img/logo-orinoco.png" alt="logo orinoco" />
             <div class="link">
+                <a href="#">Bonjour, Identifiez-vous</a>
                 <a href="mailto:Orinoco@contact.com">Contact</a>
                 <a class="cart" href="../index.html">Accueil</a>
             </div>
