--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
         </nav>
         <h1>Site de vente en ligne d'ours en peluche faits main</h1>
-        <h2>Bienvenue chez Oriteddies</h2>
+        <h2>Bienvenue chez Oriteddy</h2>
     </header>
     <div id="errorIndex"></div>
     <div id="teddies"></div>
