--- a/frontend/product.html
+++ b/frontend/product.html
@@ -14,7 +14,10 @@
             <img src="./img/logo-orinoco.png" alt="logo orinoco" />
             <div class="link">
                 <a href="mailto:Orinoco@contact.com">Contact</a>
-                <a class="cart" href="./cart.html"><i class="fas fa-shopping-cart"></i>Panier</a>
+                <a class="cart" href="./cart.html">
+                    <i class="fas fa-shopping-cart"></i>
+                    <p>Panier</p>
+                </a>
                 <a class="cart" href="../index.html">Accueil</a>
             </div>
         </nav>
