--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +11,7 @@
     <link rel="stylesheet" href="./frontend/css/style.css">
     <script src="https://kit.fontawesome.com/ac2f95dbfe.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <div id="loader">
         <div class="circle-loader"></div>
@@ -20,8 +22,9 @@
             <div class="link">
                 <a href="#">Bonjour, Identifiez-vous</a>
                 <a href="mailto:Orinoco@contact.com">Contact</a>
-                <a class="cart" href="./frontend/cart.html"><i class="fas fa-shopping-cart"></i>
-                    <p></p>Panier
+                <a class="cart" href="./frontend/cart.html">
+                    <i class="fas fa-shopping-cart"></i>
+                    <p>Panier</p>
                 </a>
             </div>
         </nav>
@@ -62,4 +65,5 @@
     </footer>
     <script src="frontend/js/index.js"></script>
 </body>
+
 </html>
