--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -11,11 +11,14 @@
 <body>
     <header>
         <nav>
-            <img src="./img/logo-orinoco.png" alt="logo orinoco" />
+            <div class="back">
+                <a class="cart" href="../index.html">Accueil</a>
+                <img src="./img/logo-orinoco.png" alt="logo orinoco" />
+            </div>
             <div class="link">
                 <a href="#">Bonjour, Identifiez-vous</a>
                 <a href="mailto:Orinoco@contact.com">Contact</a>
-                <a class="cart" href="../index.html">Accueil</a>
+                
             </div>
         </nav>
     </header>
