--- a/frontend/product.html
+++ b/frontend/product.html
@@ -11,14 +11,17 @@
 <body>
     <header>
         <nav>
-            <img src="./img/logo-orinoco.png" alt="logo orinoco" />
+            <div class="back">
+                <a class="cart" href="../index.html">Accueil</a>
+                <img src="./img/logo-orinoco.png" alt="logo orinoco" />
+            </div>
             <div class="link">
                 <a href="mailto:Orinoco@contact.com">Contact</a>
                 <a class="cart" href="./cart.html">
                     <i class="fas fa-shopping-cart"></i>
                     <p>Panier</p>
                 </a>
-                <a class="cart" href="../index.html">Accueil</a>
+                
             </div>
         </nav>
     </header>
