amélioration product.js

--- a/frontend/product.html
+++ b/frontend/product.html
@@ -9,6 +9,9 @@
     <script src="https://kit.fontawesome.com/ac2f95dbfe.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div id="info">
+        <p>Article ajouté</p>
+    </div>
     <header>
         <nav>
             <div class="back">
