--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   
-    <header>
+    <header id="backUp">
         <nav>
             <img src="./frontend/img/logo-orinoco.png" alt="logo orinoco" />
             <div class="link">
@@ -33,6 +33,9 @@
 
     <div id="errorIndex"></div>
     <div id="teddies"></div>
+    <div id="up" class="off">
+        <a href="#backUp"><i class="fas fa-chevron-up"></i></a>
+    </div>
 
     <footer>
         <div class="row-foot">
