--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -65,7 +65,7 @@
                     </div>
                     <div id="emailZone" class="noEmail">
                         <label for="email"></label>
-                        <input id="email" type="email" placeholder="e-mail" required>
+                        <input id="email" type="email" placeholder="e-mail@XXX.com" required>
                         
                     </div>
                     <div id="submit"><a id="essai" href="#">Terminer et payer</a></div>
