--- a/frontend/product.html
+++ b/frontend/product.html
@@ -22,6 +22,7 @@
                 <a href="mailto:Orinoco@contact.com">Contact</a>
                 <a class="cart" href="./cart.html">
                     <i class="fas fa-shopping-cart"></i>
+                    <div id="qty"></div>
                     <p>Panier</p>
                 </a>
                 
