--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <a href="mailto:Orinoco@contact.com">Contact</a>
                 <a class="cart" href="./frontend/cart.html">
                     <i class="fas fa-shopping-cart"></i>
+                    <div id="qty"></div>
                     <p>Panier</p>
                 </a>
             </div>
